defined doc for post requests in swagger, added query params for comments get request, fixed bugs
