# src/swagger_output.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080",
+      "url": "http://localhost:5000",
       "description": ""
     }
   ],
@@ -98,6 +98,22 @@
     "/comments": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "userId",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -106,6 +122,41 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new comment",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "date": {
+                  "type": "string",
+                  "example": "2005-07-08T00:00:00+0000"
+                },
+                "text": {
+                  "type": "string",
+                  "example": "Норм"
+                },
+                "task": {
+                  "type": "number",
+                  "example": 0
+                },
+                "user": {
+                  "type": "number",
+                  "example": 0
+                }
+              },
+              "required": [
+                "date",
+                "text",
+                "task",
+                "user"
+              ]
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -189,6 +240,31 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new role",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "Лайк"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Пользователь может лайкать понравившиеся задачи"
+                }
+              },
+              "required": [
+                "title",
+                "description"
+              ]
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -272,6 +348,31 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new rule",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "Лайк"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Пользователь может лайкать понравившиеся задачи"
+                }
+              },
+              "required": [
+                "title",
+                "description"
+              ]
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -355,10 +456,40 @@
       },
       "post": {
         "description": "",
-        "parameters": {
-          "in": "body",
-          "name": "user"
-        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new user",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "example@mail.ru"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "fkndjfbnvsdb"
+                },
+                "username": {
+                  "type": "string",
+                  "example": "user123"
+                },
+                "role": {
+                  "type": "number",
+                  "example": 0
+                }
+              },
+              "required": [
+                "email",
+                "password",
+                "username",
+                "role"
+              ]
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
